# task-555

./: .gitignore  README.md  dump.rdb  pyproject.toml  shell.nix
src/blog/migrations/: 0001_initial.py
src/landingpage/: views.py
src/mysite/: settings.py  urls.py
src/templates/: base.html  index.html  post_detail.html
src/templates/landingpage/: landing_page.html
